--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
     defaultConfig {
-        applicationId "com.example.uidp0609.testapp"
+        applicationId "com.ellophantdesign.haayhappen.Buttons"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
