--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,10 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support:support-v4:24.2.1'
+    testCompile 'junit:junit:4.12'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     compile 'com.google.firebase:firebase-core:10.0.1'
-    testCompile 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
+    compile 'com.google.android.gms:play-services-ads:10.0.1'
 }
-
-
 apply plugin: 'com.google.gms.google-services'
